b=539406 retain existing listener in AyncChannel for GeckoChildProcessHost::OnChannelConnected r=cjones